<resources>
    <string name="app_name">Android Content Application</string>

    <!-- Activities -->
    <string name="label_activity_main">Main Menu</string>
    <string name="label_activity_basic_intent">Explicit Intent</string>
    <string name="label_activity_dynamic">Dynamic Activity</string>
    <string name="label_activity_list">List Activity</string>
    <string name="label_activity_broadcast">Broadcast Receiver Activity</string>
    <string name="label_activity_implicit">Implicit Intent</string>
    <string name="label_activity_result">Intent Result</string>
    <string name="label_activity_storage">Storage Example</string>
    <string name="label_activity_listview">ListView with real Data</string>
    <string name="label_activity_database">Database Actions</string>
    <string name="basic_intent">This is a new activity.</string>
    <string name="dynamic_activity_text">Not empty!</string>
    <string name="broadcast_activity_text">Time:</string>
    <string name="implicit_activity_text">"Hello, world!"</string>

    <!-- Main Page Buttons -->
    <string name="button_basic_intent">Explicit Intent Example</string>
    <string name="button_toast">Create Toast</string>
    <string name="button_show_fragment">Show Fragment</string>
    <string name="button_empty_intent">New Empty Activity</string>
    <string name="button_extra_intent">Passing Data to the Empty Activity</string>
    <string name="button_broadcast_receiver">Broadcast Receiver</string>
    <string name="button_list_fake">List with Hardcoded Data</string>
    <string name="button_list_web">List with Data from the Internet</string>
    <string name="button_list_database">List with Data from the Database</string>
    <string name="button_implicit_intent">Implicit Intent Example</string>
    <string name="button_result_intent">Intent Result Example</string>
    <string name="button_storage">Internal and External Storage</string>

    <!-- Extra Buttons -->
    <string name="broadcast_activity_button">Start Timer</string>
    <string name="button_implicit_start">Send Message</string>
    <string name="button_result_start">Pick a Contact</string>
    <string name="button_storage_internal_create">Create Internal File</string>
    <string name="button_storage_internal_read">Read Internal File</string>
    <string name="button_storage_external_create">Create External File</string>
    <string name="button_storage_external_read">Read External File</string>
    <string name="button_open_database">Database Options</string>
    <string name="button_refresh_database">Refresh List</string>

    <!-- Hints -->
    <string name="broadcast_activity_hint">Seconds for the timer</string>
    <string name="storage_internal_hint">Enter text to be entered into the file.</string>
    <string name="storage_hint_text">Text will appear here.</string>
    <string name="storage_external_hint">Enter text for the External file.</string>

    <!-- Errors -->
    <string name="storage_text_error">An error has occurred,
        text defaulted to "Hello, world!"</string>
    <string name="storage_file_error">An error has occurred with the file, process aborted.</string>
    <string name="storage_io_error">An error has occurred, process aborted.</string>
    <string name="storage_empty">The text was empty and has been defaulted to "Hello, world!"</string>

    <!-- Notifications -->
    <string name="storage_internal_success">Internal file created successfully!</string>
    <string name="storage_external_success">External file created successfully!</string>

    <!-- Database Extras -->
    <string name="database_day_add_hint">Day</string>
    <string name="database_type_add_hint">Type</string>
    <string name="database_max_add_hint">Max</string>
    <string name="database_min_add_hint">Min</string>
    <string name="database_id_delete_hint">Row ID</string>
    <string name="database_day_update_hint">Day</string>
    <string name="database_id_update_hint">Row ID</string>
    <string name="button_database_add">Add to Database</string>
    <string name="button_database_delete">Delete from Database</string>
    <string name="button_database_update">Update Row</string>
    <string name="button_database_seed">Seed Database (5 entries)</string>
    <string name="button_database_wipe">Wipe Database</string>
</resources>
